# tee-prover-server

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile.cherrypick  Dockerfile.tee  Dockerfile.tee.cherrypick  Dockerfile.tee.instance  README.md  build_docker.sh  build_docker_images.sh  build_eif.sh  check_circuits.cherrypick.sh  check_circuits.sh  circuit_eliminator.sh  constants.sh  download_zkeys.cherrypick.sh  download_zkeys.sh  flake.nix  merge_zkeys.sh  push_docker.sh  result  setup.sql  sort_circuits.cherrypick.sh  sort_circuits.sh  sort_zkeys.sh  split_zkeys.sh  start.sh  update_creds.sh
.github/workflows/: artifacts.yml  deploy-eif.yml  deploy-image.yml  deploy.yml  eif.yml  image.yml
attestation-server/: Cargo.toml
attestation-server/src/: main.rs  nitro_rng.rs
enclave/: default.nix  setup.sh  supervisord.conf
examples/: pqxdh_test_server.rs
helm-chart/tee-prover-server/: Chart.yaml  README.md  values.yaml
helm-chart/tee-prover-server/templates/: _helpers.tpl  deployment.yaml  secret-db.yaml  service.yaml  serviceaccount.yaml
initialization/init-server/: Cargo.toml
initialization/init-server/src/: main.rs
initialization/vet/: Cargo.toml
initialization/vet/src/: main.rs
networking/raw-proxy/src/: ip_to_vsock_raw_incoming.rs  ip_to_vsock_raw_outgoing.rs  lib.rs  vsock_to_ip_raw_incoming.rs  vsock_to_ip_raw_outgoing.rs
scripts/: nitro-cli.txt  proxies.txt
src/: args.rs  lib.rs  main.rs  server.rs  store.rs  types.rs  utils.rs
src/db/: mod.rs
src/generator/: proof_generator.rs  witness_generator.rs
tee-prover/: Cargo.toml
tee-prover/src/: main.rs  server.rs  types.rs  utils.rs
tee-prover/src/db/: mod.rs
terraform/: .gitignore  README.md  main.tf  outputs.tf  terraform.tf  terraform.tfvars  variables.tf
terraform/rabbitmq/: README.md  main.tf  outputs.tf  providers.tf  startup-script.sh  terraform.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
tests/: store_tests.rs
