[package]
name = "tee-server"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonrpsee = {version = "0.24.7", features = ["server", "macros", "client-core"]}
tokio = {version="1.37.0", features = ["fs", "process"]}
uuid = {version = "1.12.0", features = ["v4", "serde"]}
serde = "1.0.217"
serde_json = "1.0.135"
aes-gcm = "0.10"
sqlx = {version="0.8.3", features=["runtime-tokio-rustls", "postgres", "uuid", "chrono"]}
clap = { version = "4.3", features = ["derive"] }

# attestation 
hyper = { version = "0.14", features = ["client", "tcp"] }
hyperlocal = "0.8"
base64 = "0.21"
google-cloud-secretmanager-v1 = "0.4.4"

serde_bytes = "0.11.15"
p256 = {version = "0.13.2", features = ["ecdh"]}
rand_core = "0.6.4"
serde_plain = "1.0.2"
lru = "0.13.0"
redis = { version = "0.30", features = ["tokio-comp", "connection-manager"] }

[features]
register = []
dsc = []
disclose = []
cherrypick = []
